# zero2prod

./: Cargo.toml  Dockerfile  PROGRESS.md  recipe.json  spec.yaml
.sqlx/: query-0171e031d885bc3f6eee647db00be5580733559ae49418f2f36390b4c4d802a0.json  query-fcd35bf5f83a52a038c61509b306d0fbd2f66be556d1abd0bf16f5c814f54261.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260620143513_create_subscription_table.sql
scripts/: clean_test_dbs.sh
src/: configuration.rs  lib.rs  main.rs  notes.rs  telemetry.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
