[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros","rt-multi-thread"]}
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.15.24"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry" , "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tower-http = { version = "0.6", features = ["trace"]}


[dev-dependencies]
reqwest = "0.12"
